[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mypkg"
version = "0.1.0"
description = "A lightweight Python toolkit for IC design & verification engineers."
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
math = ["fxpmath"]
rich = ["rich"]
excel = ["openpyxl"]

[tool.setuptools.packages.find]
include = ["mypkg*"]
